--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "skipLibCheck": true,
     "moduleResolution": "node"
   },
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["node_modules", ".vscode-test"],
+  "include": ["src/**/*"]
 }
