--- a/package.json
+++ b/package.json
@@ -291,11 +291,34 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
+    "lint:fix": "eslint src --ext ts --fix",
     "test": "npm run compile && vscode-test",
     "test:unit": "npm run compile && vscode-test --grep 'Unit Tests'",
     "test:integration": "npm run compile && vscode-test --grep 'Integration Tests'",
+    "test:mcp": "npm run compile && vscode-test --grep 'MCP Integration Tests'",
+    "test:all": "npm run compile && npm run test:unit && npm run test:integration && npm run test:mcp",
+    "test:watch": "npm run compile && vscode-test --watch",
+    "test:coverage": "npm run compile && c8 vscode-test",
+    "clean": "rimraf out *.vsix",
+    "clean:install": "npm run clean && npm ci",
+    "build": "npm run clean && npm run compile",
+    "build:production": "npm run clean && npm run compile && npm run lint && npm run test:all",
     "package": "vsce package",
-    "publish": "vsce publish"
+    "package:pre-release": "vsce package --pre-release",
+    "publish": "vsce publish",
+    "publish:pre-release": "vsce publish --pre-release",
+    "validate": "vsce package --no-dependencies && echo 'Package validation successful'",
+    "ci:prepare": "npm ci && npm run compile",
+    "ci:test": "npm run lint && npm run test:all",
+    "ci:package": "npm run validate",
+    "dev:setup": "npm install && npm run compile && npm run test",
+    "security:audit": "npm audit --audit-level=moderate",
+    "security:fix": "npm audit fix",
+    "deps:check": "npm outdated",
+    "deps:update": "npm update",
+    "release:patch": "npm version patch && npm run package",
+    "release:minor": "npm version minor && npm run package",
+    "release:major": "npm version major && npm run package"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
@@ -306,8 +329,11 @@
     "@typescript-eslint/parser": "^8.44.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
+    "@vscode/vsce": "^3.6.0",
+    "c8": "^10.1.3",
     "eslint": "^9.35.0",
     "mocha": "^11.7.2",
+    "rimraf": "^6.0.1",
     "sinon": "^21.0.0",
     "typescript": "^5.9.2"
   }
