--- a/package.json
+++ b/package.json
@@ -286,7 +286,7 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile && npm run lint",
+    "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
