--- a/package.json
+++ b/package.json
@@ -158,7 +158,7 @@
             },
             "context": {
               "type": "string",
-              "description": "Additional context for the question"
+              "description": "Additional background information about the current task, previous attempts, or relevant project context to help the expert provide better guidance."
             },
             "previousAnswer": {
               "type": "string",
