--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ask-me-copilot-tool",
   "displayName": "Ask Me Copilot Tool - Expert Collaboration for GitHub Copilot",
   "description": "Transform GitHub Copilot into a collaborative partner by enabling interactive expert communication. Get asked for input when AI needs guidance, preventing errors and improving code quality.",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "publisher": "DitriX",
   "author": {
     "name": "DitriX",
@@ -322,7 +322,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.5.1",
+    "@types/node": "^24.5.2",
     "@types/sinon": "^17.0.4",
     "@types/vscode": "^1.95.0",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
@@ -336,5 +336,8 @@
     "rimraf": "^6.0.1",
     "sinon": "^21.0.0",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "sound-play": "^1.1.0"
   }
 }
