config: change default responseTimeout to 0 (no timeout)
- Default timeout now waits indefinitely for expert response
- Updated README with new default value
- Expert input is important and should not be rushed

--- a/package.json
+++ b/package.json
@@ -112,9 +112,9 @@
         },
         "askMeCopilot.responseTimeout": {
           "type": "number",
-          "default": 300000,
+          "default": 0,
           "minimum": 0,
-          "description": "Timeout for expert response in milliseconds (0 = no timeout)"
+          "description": "Timeout for expert response in milliseconds (0 = no timeout, waits indefinitely)"
         },
         "askMeCopilot.enableResponseCache": {
           "type": "boolean",
