--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Compile TypeScript
-      run: npm run compile
+    - name: Bundle extension with esbuild
+      run: npm run bundle:production
       
     - name: Get version from package.json
       id: get_version
