feat(expert-monitor): Add Expert Monitor Panel for real-time communication
## New Features
- Expert Monitor Panel (WebviewViewProvider in panel container)
  - ⏸️ Pause Toggle - blocks Copilot execution until resumed
  - 🧠 Ask Expert Toggle - signals Copilot to call askExpert
  - 📨 Message Queue - send notes to Copilot while it works
  - 📎 Attachments - include files/images (Ctrl+V paste supported)
  - Duplicate file detection
  - Filename truncation with ellipsis (preserves extension)

- checkTaskStatus Tool - new MCP tool for periodic status polling
  - Waits if paused
  - Returns queued messages
  - Signals if Ask Expert toggle is on

## Updated
- README.md - added 7 screenshots and detailed documentation
- Keywords in package.json (image reader, pause copilot, etc.)
- CI workflow - optimized test matrix, added master branch trigger
- Tests - new unit/integration tests for ExpertMonitorState and CheckTaskStatus

## Technical
- ExpertMonitorState singleton for shared state
- EventEmitter for UI updates
- Badge counter for pending messages

Closes #TBD

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: 🧪 CI/CD Pipeline - Ask Me Copilot Extension
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, master, develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, master, develop ]
   workflow_dispatch:
 
 env:
@@ -53,8 +53,8 @@ jobs:
             }
             
             // Validate MCP tools
-            if (!pkg.contributes.languageModelTools || pkg.contributes.languageModelTools.length !== 5) {
-              throw new Error('Expected exactly 5 language model tools');
+            if (!pkg.contributes.languageModelTools || pkg.contributes.languageModelTools.length !== 6) {
+              throw new Error('Expected exactly 6 language model tools');
             }
             
             console.log('✅ Package.json validation passed');
@@ -70,14 +70,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # Simplified matrix - VS Code extensions don't need multi-Node testing
+        # VS Code bundles its own Node.js runtime for extensions
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node: ['18.x', '20.x', '22.x']
-        vscode: ['stable', 'insiders']
-        exclude:
-          # Reduce matrix size - skip some combinations for efficiency
-          - os: macos-latest
-            node: '18.x'
-          - os: windows-latest
+        node: ['20.x']  # Use LTS version only
+        vscode: ['stable']
+        include:
+          # Add insiders test on Ubuntu only for edge case coverage
+          - os: ubuntu-latest
+            node: '20.x'
             vscode: 'insiders'
 
     steps:
@@ -163,7 +164,9 @@ jobs:
               'ask-me-copilot-tool_askExpert',
               'ask-me-copilot-tool_selectFromList', 
               'ask-me-copilot-tool_reviewCode',
-              'ask-me-copilot-tool_confirmAction'
+              'ask-me-copilot-tool_confirmAction',
+              'ask-me-copilot-tool_readImage',
+              'ask-me-copilot-tool_checkTaskStatus'
             ];
             
             expectedTools.forEach(expectedId => {
