--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ask-me-copilot-tool",
   "displayName": "Ask Me Copilot Tool - Expert Collaboration for GitHub Copilot",
   "description": "Transform GitHub Copilot into a collaborative partner by enabling interactive expert communication. Get asked for input when AI needs guidance, preventing errors and improving code quality.",
-  "version": "1.6.5",
+  "version": "1.7.5",
   "publisher": "DitriX",
   "author": {
     "name": "DitriX",
@@ -106,6 +106,11 @@
       {
         "command": "askMeCopilot.openSettings",
         "title": "Ask Me Copilot: Open Settings",
+        "category": "Ask Me Copilot"
+      },
+      {
+        "command": "askMeCopilot.editTemplates",
+        "title": "Ask Me Copilot: Edit Response Templates",
         "category": "Ask Me Copilot"
       }
     ],
